    invoking “dpkg --compare-versions”.
  * debian/control: Update Vcs-* to point to the new Git repository.
  * dcmd: Allow capital letters for the section and priority fields.  (Closes:
    #565159)
  * debcheckout: Ensure "/git/" is at the start of the URL's path when
    performing an authenticated clone of an Alioth git repo.
  * uupdate: Fix a typo which caused redirection of stdout to a file name "@".
    (Closes: #569062)
  * Update descriptions of debcommit to include darcs as a supported VCS.
    (Closes: #570138)
  * debchange:
    + Add maverick as a valid distribution.  Thanks to Benjamin Drung for the
      patch.  (Closes: #576287)
    + Treat a trailing '+' like a trailing '~' when incrementing the version
      number.  (Closes: #521642)
  * debuild: Expose two new variables (epoch-less source version, and upstream
    version) to hooks.  Thanks to gregor herrmann for the patch.  (Closes:
    573092)
  * checkbashisms: Detect more Bash builtins -- readarray, mapfile, enable.
    (Closes: #568473)
  * dd-list: Clarify that --dctrl simply changes the expected format of the
    list of packages.  Thanks to Adeodato Simó for the suggestion.  (Partially
    addresses #509983)
  * Add bash completion of package names for various Devscripts commands.
    Thanks to Simon Paillard for the patch.  (Closes: #507776)
  * Document in dscverify(1) that /usr/share/keyrings/debian-maintainers.gpg
    is one of the default keyrings.
  * dget: Add description of the use of dscverify to the description in the
    man page.  (Closes: #537367)

  [ Patrick Schoenfeld ]
  * nmudiff: Fix "[nmudiff] please include --tagpending option" by applying the
    patch from Gregor Herrmann. Thanks. (Closes: #559549)
  * build-rdeps:
    + Add some documentation to the manpage, which emphasizes on the fact that
      the tool has some external dependencies (namely apt Sources files)
    + Add a proper argument passing to test_for_valid_component() so that