@@ -19,12 +19,12 @@ Note that the patch file or archive cannot be within the source tree
 itself.  The full details of what the code does are given below.
 .PP
 Currently supported source code file types are \fI.tar.gz\fR,
-\fI.tar.bz2\fR, \fI.tar.Z\fR, \fI.tgz\fR, \fI.tar\fR, \fI.tar.lzma\fR
-and \fI.zip\fR
+\fI.tar.bz2\fR, \fI.tar.Z\fR, \fI.tgz\fR, \fI.tar\fR, \fI.tar.lzma\fR,
+\fI.tar.xz\fR and \fI.zip\fR
 archives.  Also supported are already unpacked source code archives;
 simply give the path of the source code directory.  Supported patch
 file types are \fBgzip\fR-compressed, \fBbzip2\fR-compressed,
-\fBlzma\fR-compressed and
+\fBlzma\fR-compressed, \fBxz\fR-compressed and
 uncompressed patch files.  The file types are identified by the file
 names, so they must use the standard suffixes.
 .PP
